WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255831
Crash in MomentumEventDispatcher::displayDidRefresh()
https://bugs.webkit.org/show_bug.cgi?id=255831
Summary
Crash in MomentumEventDispatcher::displayDidRefresh()
Simon Fraser (smfr)
Reported
2023-04-22 12:11:53 PDT
The fix done in
261404@main
isn't quite right; it's possible to enter RemoteLayerTreeEventDispatcher::didRefreshDisplay() after m_momentumEventDispatcher has been nulled out.
Attachments
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2023-04-22 12:12:14 PDT
<
rdar://108105416
>
Simon Fraser (smfr)
Comment 2
2023-04-22 12:18:21 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13071
EWS
Comment 3
2023-04-24 11:21:04 PDT
Committed
263321@main
(3147f52e6d8d): <
https://commits.webkit.org/263321@main
> Reviewed commits have been landed. Closing PR #13071 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug